--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             <div class="instructions">
                 <h2> Instructions: </h2>
                 <p>
-                    Click a button below to display each movies gifs.
-                    Type any movie into the search bar and hit 'add movie' to get more gifs!
+                    Click a movie button below to display each movies gifs.
+                    <br>
+                    Type the movie name into the search bar and hit 'submit' to recieve more gifs!
+                    <br>
+                    Click on each gifs picture to start the animation, click again to pause the animation. 
+                    <br>
+                    Enjoy!!
                 </p>
             </div>
 
